--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ docker_compose_version = 1.26.2
 
 [testenv]
 basepython = python3.8
-passenv = SSH_AUTH_SOCK PAASTA_ENV DOCKER_HOST
+passenv = SSH_AUTH_SOCK PAASTA_ENV DOCKER_HOST CI
 setenv =
     TZ = UTC
 deps =
